# capsule

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: agentdrive-auto-pr.yml
cli/: main.py
docs/: AGENTS.md  ANALYTICS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CODEMAP.md  DATA_RETENTION.md  DB_SCHEMA.md  DEPLOY.md  EMAIL.md  EMPTY_STATES.md  ENV.md  ERRORS.md  EVENTS.md  FEATURES.md  FEATURE_FLAGS.md  FUTURE.md  MARKETING.md  MONITORING.md  OPENAPI.yaml  PAYMENTS.md  PERF_BUDGET.md  PRICING.md  RATE_LIMITS.md  SECURITY.md  SOCIAL.md  STAGING.md  TECH-STACK.md  TESTS.md
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.tsx  index.css
scripts/: setup.sh  start_all.sh  stop_all.sh
services/api/: dependencies.py  main.py  routes.py
services/parser/: parser.py
services/search/: engine.py
services/shared/: config.py  models.py
services/sync/: watcher.py
tests/: conftest.py  test_api.py  test_e2e.py  test_parser.py  test_search.py  test_sync.py
